MAJ controllers routers Lesson et Publication

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a series of tutrials for diginamic nodejs workshop",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "express",
@@ -20,5 +21,14 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EtienneU/FinalProject_NodeJS.git"
+  },
+  "bugs": {
+    "url": "https://github.com/EtienneU/FinalProject_NodeJS/issues"
+  },
+  "homepage": "https://github.com/EtienneU/FinalProject_NodeJS#readme"
 }
