--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nodejs",
     "sequelize"
   ],
-  "author": "Youssef El Behi",
+  "author": "Etienne URBANO",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
